gcc/testsuite/rust/rustc/ui/error-codes/E0200.rs
struct Foo;

unsafe trait Bar { }

impl Bar for Foo { } // { dg-error ".E0200." "" { target *-*-* } }

fn main() {
}

